--- a/lib/moba_web/templates/arena/_matchmaking.html.heex
+++ b/lib/moba_web/templates/arena/_matchmaking.html.heex
@@ -12,9 +12,9 @@
                     <tr>
                         <td class="d-flex justify-content-center">
                             <img src={"/images/pve/#{match.opponent.pve_tier}.png"} class="mr-2" style="max-height:  40px"/>
-                            <div style="width: 50%">
-                                <h4>
-                                    <%= live_redirect username(match.opponent), to: Routes.player_path(@socket, :show, match.opponent.id), class: "text-primary" %>       
+                            <div style="width: 70%">
+                                <h4 class="mt-2">
+                                    <%= live_redirect username(match.opponent), to: Routes.player_path(@socket, :show, match.opponent.id), class: "text-white" %>       
                                 </h4>
                             </div>
                         </td>
