--- a/lib/moba_web/templates/layout/sidebar.html.heex
+++ b/lib/moba_web/templates/layout/sidebar.html.heex
@@ -1,25 +1,20 @@
 <div class="row">
     <div class="sidebar-nav-container">
         <div class="sidebar-nav d-none d-md-flex">
-            <%= if assigns[:current_hero] && is_nil(assigns[:current_hero].finished_at) do %>
-                <%= live_redirect to: Routes.live_path(@socket, MobaWeb.TrainingLive), data: [toggle: "tooltip", "tippy-placement": "right", "tippy-arrow": false], title: "<h3 class='ml-2 mr-2'>Return to Training</h3>", class: sidebar_class("training", assigns) do %>
-                    <i class="fa-duotone fa-sword"></i>
-                <% end %>              
+            <%= live_redirect to: Routes.live_path(@socket, MobaWeb.DashboardLive), data: [toggle: "tooltip", "tippy-placement": "right", "tippy-arrow": false], title: "<h3 class='ml-2 mr-2'>Training</h3>", class: sidebar_class(["training", "base"], assigns) do %>
+                <i class="fa-duotone fa-sword"></i>
             <% end %>
-            <%= live_redirect to: Routes.live_path(@socket, MobaWeb.DashboardLive), data: [toggle: "tooltip", "tippy-placement": "right", "tippy-arrow": false], title: "<h3 class='ml-2 mr-2'>Base</h3>", class: sidebar_class("base", assigns) do %>
-                <i class="fa-duotone fa-home"></i>
-            <% end %>
-            <%= if @current_player.pve_tier > 0 do %>
+            <%= if @current_player.user_id do %>
                 <%= live_redirect to: Routes.live_path(@socket, MobaWeb.ArenaLive), data: [toggle: "tooltip", "tippy-placement": "right", "tippy-arrow": false], title: "<h3 class='ml-2 mr-2'>Arena</h3>", class: sidebar_class("arena", assigns)  do %>
                     <i class="fa-duotone fa-swords"></i>
                 <% end %>
             <% else %>
-                <a href="javascript:;" class="no-action" data-toggle="tooltip" data-tippy-placement="right" title="<h3 class='ml-2 mr-2'>Arena (locked)<br/><em class='font-15'>requires 2 trained Heroes</em></h3>">
+                <a href="javascript:;" class="no-action" data-toggle="tooltip" data-tippy-placement="right" title="<h3 class='ml-2 mr-2'>Arena (locked)<br/><em class='font-15'>you must create an account</em></h3>">
                     <i class="fa-duotone fa-swords"></i>
                 </a>
             <% end %>
             <%= if guest?(@current_player) do %>
-                <%= link to: Routes.pow_registration_path(@socket, :new), data: [toggle: "tooltip", "tippy-placement": "right", "tippy-arrow": false], title: "<h3 class='ml-2 mr-2'>Create an Account</h3>" do %>
+                <%= link to: Routes.pow_registration_path(@socket, :new), data: [toggle: "tooltip", "tippy-placement": "right", "tippy-arrow": false], title: "<h3 class='ml-2 mr-2'>Create an Account</h3>", id: "create-account-link" do %>
                     <i class="fa fa-user-plus"></i>
                 <% end %>
             <% else %>
