--- a/lib/moba_web/templates/match/_picked_hero.html.heex
+++ b/lib/moba_web/templates/match/_picked_hero.html.heex
@@ -1,5 +1,5 @@
-<div class="col-md-12 mt-1" id={"hero-#{@hero.id}"} phx-target-element={"#hero-footer-#{@hero.id}"}  phx-hook="ToggleDisplay">
-    <div class="card hero-card mb-0" style={"background-image: url(#{GH.background_url(@hero)})"}>
+<div class="col-md-12 mt-1" id={"hero-#{@hero.id}"} phx-target-element={"#hero-footer-#{@player_id}-#{@hero.id}"}  phx-hook="ToggleDisplay">
+    <div class="card hero-card picked-hero mb-0" style={"background-image: url(#{GH.background_url(@hero)})"}>
         <div class="card-header pt-0 pb-1">
             <h4 class="text-white d-flex justify-content-between align-items-center mb-0">
                 <span class="font-italic font-20 f-rpg"><%= if @hero.pve_ranking do %>#<%= @hero.pve_ranking %><% end %></span>
@@ -12,7 +12,7 @@
         </div>
         <div class="card-body p-0 d-flex align-items-center justify-content-center" >
         </div>
-        <div class="card-footer transparent p-1" id={"hero-footer-#{@hero.id}"}>
+        <div class="card-footer transparent p-1" id={"hero-footer-#{@player_id}-#{@hero.id}"}>
             <div class="row">
                 <div class="col-12">
                     <div class="skills-container d-flex justify-content-between">
