--- a/assets/css/arena.scss
+++ b/assets/css/arena.scss
@@ -46,7 +46,31 @@
     margin-bottom: 10px;
   }
 
+  .matchmaking-button{
+    .badge{
+      font-size: 0.7rem;
+    }
+  }
+
+  #pvp-progression{
+    .info-box{
+      text-align: center;
+      line-height: 0.8;
+      border: 1px solid;
+      padding: 1rem;
+      margin: -2px;
+
+      small{
+        font-size: 0.9rem;
+      }
+    }
+    .btn{
+      background: 0;
+    }
+  }
+
 	.matchmaking{
+    overflow: hidden;
 
     .avatar{
       max-height: 25px;
@@ -57,7 +81,7 @@
     }
 
     .history{
-    	max-height: 220px;
+    	max-height: 60vh;
     	overflow: auto;
 
       h4{
@@ -65,20 +89,62 @@
       }
     }
 
-    .matchmaking-button{
-    	.badge{
-    		font-size: 0.7rem;
-    	}
+    
+  }
+
+  .ranking{
+    padding: 0;
+    max-height: 65vh;
+
+    .card-body{
+      padding: 0;
+      overflow: auto;
+
+      thead th {
+        position: -webkit-sticky; // this is for all Safari (Desktop & iOS), not for Chrome
+        position: sticky;
+        top: 0;
+        z-index: 1;
+        background: #414d59;
+        border-top: 0;
+        padding: 0.7rem;
+      }
+
+      tfoot th{
+        position: -webkit-sticky; // this is for all Safari (Desktop & iOS), not for Chrome
+        position: sticky;
+        bottom: 0;
+        z-index: 1;
+        background: #3a454f;
+        border-top: 0;
+        padding: 0.75rem;
+        vertical-align: middle;
+      }
+    }
+
+    .pvp-rank{
+      max-height: 50px;
     }
   }
 
   .duels {
+    overflow: hidden;
+
     .avatar{
       max-height: 25px;
     }
 
     h5{
       margin: 0;
+    }
+
+    .history{
+      max-height: 60vh;
+      overflow: auto;
+
+      h4{
+        margin: 0;
+      }
     }
   }
 }
