--- a/lib/moba_web/templates/match/show.html.heex
+++ b/lib/moba_web/templates/match/show.html.heex
@@ -1,20 +1,10 @@
 <div class="matches">
 	<div class="row mt-2">
 		<div class="col-4">
-			<div class="card mb-0">
-				<h2 class="text-center f-rpg"><%= username(@match.player) %></h2>
+			<div class="card mb-0" id="player-card">
+				<h2 class="text-center f-rpg"><%= live_redirect username(@match.player), to: Routes.player_path(@socket, :show, @match.player), class: "text-white" %></h2>
 			</div>
 			<div class="row mt-2">
-				<%= if length(@picked_heroes) >= 5 && !@match.phase do %>
-					<div class="col">
-						<button type="button" class="btn text-center btn-lg btn-block btn-secondary dark-button mt-1" phx-click="start" phx-hook="Loading" id="start-match-button">
-							<span class="loading-text">
-								<i class="fa fa-play mr-1"></i>
-								Lock Picks and Start Match
-							</span>
-						</button>
-					</div>
-				<% end %>
 				<%= for hero <- @picked_heroes do %>
 					<%= render "_picked_hero.html", hero: hero, player_id: @match.player_id %>
 				<% end %>
@@ -23,7 +13,7 @@
 		<div class="col-4">
 			<div class="row">
 				<div class="col">
-					<div class="card mb-0">
+					<div class="card mb-0" phx-hook="EqualHeight" phx-target="#player-card" id="winner-card">
 						<%= if @match.phase do %>
 							<h2 class="text-center">
 								Winner:
@@ -34,7 +24,16 @@
 								<% end %>
 							</h2>
 						<% else %>
-							<h2 class="text-center text-white">Pick 5 Heroes</h2>
+							<%= if length(@picked_heroes) >= 5 do %>
+								<button type="button" class="btn text-center btn-lg btn-block btn-secondary dark-button margin-auto" phx-click="start" phx-hook="Loading" id="start-match-button">
+									<span class="loading-text">
+										<i class="fa fa-play mr-1"></i>
+										Lock Picks and Start Match
+									</span>
+								</button>
+							<% else %>
+								<h2 class="text-center text-white">Pick 5 Heroes</h2>
+							<% end %>
 						<% end %>
 					</div>
 				</div>
@@ -44,19 +43,19 @@
 					<div class="col">
 						<div class="card mb-0 mt-2" phx-hook="EqualHeight" phx-target="#opponent-heroes-container" id="picks-card">
 							<ul class="nav nav-pills navtab-bg mt-2 justify-content-center">
-              	<li class="nav-item">
-                  	<a href="#trained-heroes" phx-click="hero-tab" phx-value-type="trained" data-toggle="tab" class={"nav-link px-2 py-1 #{if @hero_tab == "trained", do: "active"}"} phx-hook="Loading" id="trained-heroes-button">
-                      	<span class="d-inline-block loading-text"><i class="fa fa-sword mr-1"></i>Trained Heroes</span>
-                  	</a>
-                </li>
-                <li class="nav-item">
-            				<a href="#available-heroes" phx-click="hero-tab" phx-value-type="available" data-toggle="tab" class={"nav-link px-2 py-1 #{if @hero_tab == "available", do: "active"}"} phx-hook="Loading" id="available-heroes-button">
-                      	<span class="d-inline-block loading-text"><i class="fa fa-dice mr-1"></i>Available Heroes</span>
-                  	</a>
-              	</li>
-            	</ul>
-			        <div class="tab-content pt-0 mt-2">
-			          <div class={"tab-pane fade #{if @hero_tab == "trained", do: "active show"}"} id="trained-heroes">
+				              	<li class="nav-item">
+				                  	<a href="#trained-heroes" phx-click="hero-tab" phx-value-type="trained" data-toggle="tab" class={"nav-link px-2 py-1 #{if @hero_tab == "trained", do: "active"}"} phx-hook="Loading" id="trained-heroes-button">
+				                      	<span class="d-inline-block loading-text"><i class="fa fa-sword mr-1"></i>Trained Heroes</span>
+				                  	</a>
+				                </li>
+				                <li class="nav-item">
+				            				<a href="#available-heroes" phx-click="hero-tab" phx-value-type="available" data-toggle="tab" class={"nav-link px-2 py-1 #{if @hero_tab == "available", do: "active"}"} phx-hook="Loading" id="available-heroes-button">
+				                      	<span class="d-inline-block loading-text"><i class="fa fa-dice mr-1"></i>Available Heroes</span>
+				                  	</a>
+				              	</li>
+            				</ul>
+			        		<div class="tab-content pt-0 mt-2">
+			          			<div class={"tab-pane fade #{if @hero_tab == "trained", do: "active show"}"} id="trained-heroes">
 									<hr class="mb-2"/>
 									<%= for hero <- @trained_heroes do %>
 										<%= render "_hero.html", hero: hero, picked_ids: Enum.map(@picked_heroes, &(&1.id))  %>
@@ -69,7 +68,6 @@
 									<% end %>
 								</div>
 							</div>
-
 						</div>
 					</div>
 				</div>
@@ -82,7 +80,7 @@
 		</div>
 		<div class="col-4">
 			<div class="card mb-0">
-				<h2 class="text-center f-rpg"><%= username(@match.opponent) %></h2>
+				<h2 class="text-center f-rpg"><%= live_redirect username(@match.opponent), to: Routes.player_path(@socket, :show, @match.opponent), class: "text-white" %></h2>
 			</div>
 			<div class="row mt-2" id="opponent-heroes-container">
 				<%= for hero <- @match.opponent_picks do %>
