--- a/lib/moba_web/templates/admin/season/_player_row.html.heex
+++ b/lib/moba_web/templates/admin/season/_player_row.html.heex
@@ -1,15 +1,15 @@
-<tr id="user-<%= @player.id %>">
+<tr id={"user-#{@player.id}"}>
     <td class="text-center">
         <%= live_redirect to: Routes.player_path(@socket, :show, @player), class: "text-white" do %>
-            <img src="/images/pve/<%= @player.pve_tier %>.png" style="max-height:  50px"/>
+            <img src={"/images/pve/#{@player.pve_tier}.png"} class={"rank-shadow-#{PlayerView.shadow_rank(@player)}"} style="max-height:  50px"/>
             <br/>
-            <span class="text-white"><%= @player.user.username %></span>
+            <span class={"text-white rank-shadow-#{PlayerView.shadow_rank(@player)}"}><%= @player.user.username %></span>
             <span class="badge badge-pill badge-light-success"><%= @player.hero_count%></span>
             <span class="badge badge-pill badge-light-dark"><%= @player.user.shard_count%></span>
         <% end %>
         <br/>
-        <small class="text-dark font-italic">
-            D#<%= @player.ranking %> (<%= @player.pvp_tier %>) - S#<%= @player.season_ranking %> - BI <%= @player.best_immortal_streak %> - CI <%= @player.current_immortal_streak %>
+        <small class="text-dark font-italic ">
+            D#<%= @player.ranking %> - S#<%= @player.season_ranking %> - BS <%= @player.best_immortal_streak %> - CS <%= @player.current_immortal_streak %>
             <br/>
             Online <%= @player.user.last_online_at |> Timex.format("{relative}", :relative) |> elem(1) %>
             <br/>
@@ -17,20 +17,20 @@
         </small>
     </td>
     <%= for hero <- @player.latest_heroes do %>
-        <td class="text-center <%= if hero.id == @player.current_pve_hero_id, do: "border" %>">
-            <img src="<%= GH.image_url(hero.avatar) %>" style="width: 100px;" class="img-border-xs"><br/>
+        <td class={"text-center #{if hero.id == @player.current_pve_hero_id, do: "border"}"}>
+            <img src={"#{GH.image_url(hero.avatar)}"} style="width: 100px;" class="img-border-xs"><br/>
             <h5 class="mb-0 text-center">
-                <img src="/images/league/<%= hero.league_tier %>.png" style="width: 20px;">
+                <img src={"/images/league/#{hero.league_tier}.png"} style="width: 20px;">
                 <%= live_redirect to: Routes.live_path(@socket, MobaWeb.HeroLive, hero), class: "text-white" do %>
-                    Lv <span class='<%= if hero.pve_state == "dead", do: "text-muted" %>'><%= hero.level %></span> 
+                    Lv <span class={if hero.pve_state == "dead", do: "text-muted"}><%= hero.level %></span> 
                     <%= if hero.pve_ranking do %>
                         <span class="text-success">#<%= hero.pve_ranking %></span>
                     <% end %>
                 <% end %>
             </h5>
             <div class="progress mb-1 mt-2 margin-auto" style="max-width: 150px">
-                <div class="progress-bar" role="progressbar" style="width: <%= xp_farm_percentage(hero) %>%"> <%= xp_farm_percentage(hero) %></div>
-                <div class="progress-bar bg-warning" style="width: <%= gold_farm_percentage(hero) %>%"> <%= gold_farm_percentage(hero) %></div>
+                <div class="progress-bar" role="progressbar" style={"width: #{xp_farm_percentage(hero)}%"}> <%= xp_farm_percentage(hero) %></div>
+                <div class="progress-bar bg-warning" style={"width: #{gold_farm_percentage(hero)}%"}> <%= gold_farm_percentage(hero) %></div>
             </div>
             <%= if hero.finished_at do %>
                 <span class="text-muted"><%= hero.finished_at |> Timex.format("{relative}", :relative) |> elem(1) %></span>
