--- a/lib/moba_web/templates/arena/_ranking.html.heex
+++ b/lib/moba_web/templates/arena/_ranking.html.heex
@@ -1,11 +1,29 @@
 <div class="card ranking">
+    <ul class="nav nav-pills navtab-bg mt-2 mb-2 justify-content-around">
+            <li class="nav-item">
+                <a href="javascript:;" phx-click="tiered-ranking" phx-value-type="immortals" data-toggle="tab" class={"nav-link px-2 py-1 #{if @ranking_tab == "immortals", do: "active"} rank-shadow-2"} phx-hook="Loading" id="immortal-ranking-button">
+                    <span class="d-inline-block loading-text">Immortals</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="javascript:;" phx-click="tiered-ranking" phx-value-type="shadows" data-toggle="tab" class={"nav-link px-2 py-1 #{if @ranking_tab == "shadows", do: "active"} rank-shadow-1"} phx-hook="Loading" id="shadow-ranking-button">
+                    <span class="d-inline-block loading-text">Shadows</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="javascript:;" phx-click="tiered-ranking" phx-value-type="plebs" data-toggle="tab" class={"nav-link px-2 py-1 #{if @ranking_tab == "plebs", do: "active"} rank-shadow-0 border"} phx-hook="Loading" id="pleb-ranking-button">
+                    <span class="d-inline-block loading-text">Plebs</span>
+                </a>
+            </li>
+        </ul>
     <div class="card-body">
+        
         <table class="table table-dark text-center m-0 table-sm">
             <thead>
                 <tr>
-                    <th><%= tier_label(@current_player) %> Rank</th>
-                    <th>Player</th>
-                    <th>Daily Win Rate</th>
+                    <th width="33%">Rank</th>
+                    <th width="33%">Player</th>
+                    <th width="33%">Daily Win Rate</th>
                 </tr>
             </thead>
             <tbody>
@@ -39,7 +57,7 @@
                             <% end %>
                         </th>
                         <th>
-                            <img src={"/images/pve/#{@current_player.pve_tier}.png"} class="pvp-rank" />
+                            <img src={"/images/pve/#{@current_player.pve_tier}.png"} class={"pvp-rank rank-shadow-#{PlayerView.shadow_rank(@current_player)}"}/>
                             <h5 class="font-weight-bold mb-0 mt-1 text-info"><%= username(@current_player) %></h5>
                         </th>
                         <th>
