--- a/lib/moba_web/templates/admin/season/show.html.heex
+++ b/lib/moba_web/templates/admin/season/show.html.heex
@@ -46,6 +46,61 @@
     <% end %>
 </div>
 
+
+<div class="row mt-3">
+    <div class="col">
+        <div class="card">
+            <div class="card-body">
+                <h3 class="text-center mt-0">Arena Stats<br/><small>Avg Winrate: <%= @match_stats.winrate %>%</small></h3>
+                <div class="row">
+                    <div class="col">
+                        <div class="card-box" style="background-color: rgba(0, 0, 0, 0.2);">
+                            <div class="row">
+                                <div class="col">
+                                    <%= for {avatar, {winrate, diff}} <- top_performing(@match_stats, :avatars) do %>
+                                        <div class="text-center">
+                                            <img src={GH.image_url(avatar)} style="width: 100px" class="image-border-xs"/><br/><%= avatar.name %> - <%= winrate %>%
+                                        </div>
+                                    <% end %>
+                                </div>
+                                <div class="col">
+                                    <%= for {avatar, {winrate, diff}} <- bottom_performing(@match_stats, :avatars) do %>
+                                        <div class="text-center">
+                                            <img src={GH.image_url(avatar)} style="width: 100px" class="image-border-xs"/><br/><%= avatar.name %> - <%= winrate %>%
+                                        </div>
+                                    <% end %>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card-box" style="background-color: rgba(0, 0, 0, 0.2);">
+                            <div class="row">
+                                <div class="col">
+                                    <%= for {skill, {winrate, diff}} <- top_performing(@match_stats, :skills) do %>
+                                        <div class="text-center">
+                                            <img src={GH.image_url(skill)} style="width: 60px" class="image-border-xs"/><br/><%= skill.name %> - <%= winrate %>%
+                                        </div>
+                                    <% end %>
+                                </div>
+                                <div class="col">
+                                    <%= for {skill, {winrate, diff}} <- bottom_performing(@match_stats, :skills) do %>
+                                        <div class="text-center">
+                                            <img src={GH.image_url(skill)} style="width: 60px" class="image-border-xs"/><br/><%= skill.name %> - <%= winrate %>%
+                                        </div>
+                                    <% end %>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>  
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 <div class="row mt-3">
     <div class="col-xl-6 col-lg-8 margin-auto col-xs-12">
         <table class="table table-dark mb-0 border-left border-right border-bottom text-center">
@@ -58,14 +113,14 @@
                         <%= duel.inserted_at |> Timex.format("{relative}", :relative) |> elem(1) %>
                     </td>
                     <td>
-                       <img src="/images/pve/<%= duel.player.pve_tier %>.png" style="max-height:  40px"/><br/>
+                       <img src={"/images/pve/#{duel.player.pve_tier}.png"} style="max-height:  40px"/><br/>
                        <%= username(duel.player) %>
                     </td>
                     <td style="width: 1%">
                         vs
                     </td>
                     <td>
-                        <img src="/images/pve/<%= duel.opponent_player.pve_tier %>.png" style="max-height:  40px"/><br/>
+                        <img src={"/images/pve/#{duel.opponent_player.pve_tier}.png"} style="max-height:  40px"/><br/>
                         <%= username(duel.opponent_player)%>
                     </td>
                     <td>
