--- a/lib/moba_web/templates/battle/_duel_rewards.html.leex
+++ b/lib/moba_web/templates/battle/_duel_rewards.html.leex
@@ -6,7 +6,7 @@
         <%= if @battle.duel.rewards do %>
             <h3 class="mb-2">
                 <%= if @battle.duel.rewards.attacker_pvp_points != 0 do %>
-                    <%= if @battle.rewards.attacker_pvp_points > 0 do %>
+                    <%= if @battle.duel.rewards.attacker_pvp_points > 0 do %>
                         <span class="badge badge-pill badge-light-success"><%= username(@battle.duel.player) %>: +<%=@battle.duel.rewards.attacker_pvp_points%> Season Points</span>
                     <% else %>
                         <span class="badge badge-pill badge-light-dark"><%= username(@battle.duel.player) %>: <%=@battle.duel.rewards.attacker_pvp_points%> Season Points</span>
